--- a/sw.css
+++ b/sw.css
@@ -25,6 +25,28 @@ width : 80%;
 background : #aaa;
 }
 
+#plotctrl {
+  border: 2px solid black;
+  background : greenyellow;
+}
+
+.axis {
+  min-width: 15%;
+}
+th {
+  min-width: 4em;
+}
+.axis p {
+  border-radius: 25px;
+  border: 1px solid grey;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  text-align: center;
+  padding: 0px; 
+  min-width: 100px;
+}
+
+
 .nested {
   display: none;
 }
